--- a/app.json
+++ b/app.json
@@ -1,26 +1,12 @@
 {
+  "name": "mynewproject",
+  "displayName": "mynewproject",
   "expo": {
-    "name": "myapp",
-    "slug": "myapp",
+    "name": "mynewproject",
+    "slug": "mynewproject",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
     "assetBundlePatterns": [
       "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    ]
   }
 }
